--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,12 +1,13 @@
 pipeline {
     agent any
-    options {
-        // options
-    }
 
-    parameters {
-        // Parameters
-    }
+    // options {
+    //     // options
+    // }
+
+    // parameters {
+    //     // Parameters
+    // }
 
     environment {
         // environment variables
