--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,9 +5,10 @@ pipeline {
     //     // options
     // }
 
-    // parameters {
-    //     // Parameters
-    // }
+    parameters {
+        // Parameters
+        booleanParam(name: 'destroy', defaultValue: false, description: 'True pour détruire et False pour créer')
+    }
 
     environment {
         // environment variables
