--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,11 +5,11 @@ pipeline {
     //     // options
     // }
 
-    parameters {
-        // Parameters
-        // test
-        booleanParam(name: 'DESTROY', defaultValue: false, description: 'True pour détruire et False pour créer')
-    }
+    // parameters {
+    //     // Parameters
+    //     // test
+    //     booleanParam(name: 'DESTROY', defaultValue: false, description: 'True pour détruire et False pour créer')
+    // }
 
     environment {
         // environment variables
@@ -65,6 +65,7 @@ stages {
                 if (destroyChoice) {
                     input(id: 'confirmDestroy', message: "T es sûre de vouloir détruire ton infra?", ok: 'oui', cancel: 'non')
                     // Si confirmé, on détruit l'infrastructure avec terraform destroy
+                    sh 'terraform init'
                     sh 'terraform destroy -auto-approve'
                 } else {
                     // Si DESTROY est à false (case décochée), on demande une confirmation pour commencer la création
